--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div id="top_slogan"></div>
         <div id= "top_social">
             <ul>
-                <li class="social_menu"><a class="social_menu_a" href="https://www.facebook.com"><img id="icone" src="/img/Icone/facebook.png" alt="facebook" srcset=""  /></a></li>
-                <li class="social_menu"><a class="social_menu_a" href="https://www.instagram.com"><img id="icone" src="/img/Icone/instagram.png" alt="instagram" srcset="" /></a></li>
-                <li class="social_menu"><a class="social_menu_a" href="https://www.tiktok.com"><img id="icone" src="/img/Icone/tiktok.png" alt="tiktok" srcset="" /></a></li>
+                <li class="social_menu"><a class="social_menu_a" href="https://www.facebook.com"><img id="icone" src="/img/Icone/facebook.png" alt="" srcset=""  /></a></li>
+                <li class="social_menu"><a class="social_menu_a" href="https://www.instagram.com"><img id="icone" src="/img/Icone/instagram.png" alt="" srcset="" /></a></li>
+                <li class="social_menu"><a class="social_menu_a" href="https://www.tiktok.com"><img id="icone" src="/img/Icone/tiktok.png" alt="" srcset="" /></a></li>
             </ul></div>
     <div id="sous_menu_1">
         <ul>
