--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Vempijwelry</title>
 </head>
 <header>
     <div id="top_menu">
-        <div id="top_logo"><img id="logo" src="/img/Icone/logo.png" alt="" srcset=""></div>
+        <div id="top_logo"><img id="logo" src="/img/icone/logo.png" alt="" ></div>
         
         
         <div id="top_titre">VAMPIWELRY</div>
         <div id="top_slogan"></div>
         <div id= "top_social">
             <ul>
-                <li class="social_menu"><a class="social_menu_a" href="https://www.facebook.com"><img id="icone" src="/img/Icone/facebook.png" alt="" srcset=""  /></a></li>
-                <li class="social_menu"><a class="social_menu_a" href="https://www.instagram.com"><img id="icone" src="/img/Icone/instagram.png" alt="" srcset="" /></a></li>
-                <li class="social_menu"><a class="social_menu_a" href="https://www.tiktok.com"><img id="icone" src="/img/Icone/tiktok.png" alt="" srcset="" /></a></li>
+                <li class="social_menu"><a class="social_menu_a" href="https://www.facebook.com"><img id="icone" src="/img/icone/facebook.png" alt=""  /></a></li>
+                <li class="social_menu"><a class="social_menu_a" href="https://www.instagram.com"><img id="icone" src="/img/icone/instagram.png" alt="" /></a></li>
+                <li class="social_menu"><a class="social_menu_a" href="https://www.tiktok.com"><img id="icone" src="/img/icone/tiktok.png" alt=""  /></a></li>
             </ul></div>
     <div id="sous_menu_1">
         <ul>
