--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </header>
 <div class="underline"></div>
-<span id="bg_1">
+<div id="bg_1">
 <div id="carou">
     
 <div id="carou_1">
@@ -59,7 +59,9 @@
 
 </div>
 </div>
-</span>
+
+</div>
+<div id="underline_0"></div>
 <div id="shop">
 
 
