--- a/index.html
+++ b/index.html
@@ -43,22 +43,15 @@
 </header>
 <div class="underline"></div>
 <div id="bg_1">
-<div id="carou">
-    
-<div id="carou_1">
-    
-    <div class="carou_face"><span>je suis la 1 </span></div>
-    <div class="carou_face"><span>je suis la 2 </span></div>
-    <div class="carou_face"><span>je suis la 3</span></div>
-    <div class="carou_face"><span>je suis la 4</span></div>
-    <div class="carou_face"><span>je suis la 5</span></div>
-    <div class="carou_face"><span>je suis la 6</span></div>
-    <div class="carou_face"><span>je suis la 7</span></div>
-    <div class="carou_face"><span>je suis la 8</span></div>
-    <div class="carou_face"><span>je suis la 9</span></div>
 
-</div>
-</div>
+    <div class="pic-ctn">
+        <img src="https://picsum.photos/200/300?t=1" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=2" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+      </div>
+
 
 </div>
 <div id="underline_0"></div>
