--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,  initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86"  >
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Vempijwelry</title>
+    <meta name="viewport" content="width=device-width,  initial-scale=1" />
+    <link media="screen" rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
+    <title>Vampijwelry</title>
 </head>
 <body>
 <header>
