--- a/index.html
+++ b/index.html
@@ -57,7 +57,33 @@
 </div>
 <div id="underline_0"></div>
 <div id="shop">
+    <div id="ligne_1">
+        <span class="shop_img">
 
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+        </span>
+
+    </div>
+    <div id="ligne_1">
+        <span class="shop_img">
+
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+        </span>
+
+    </div>
+    <div id="ligne_1">
+        <span class="shop_img">
+
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+            <img src="https://picsum.photos/200/300?t=5" alt="">
+        </span>
+
+    </div>
 
 
 
@@ -69,4 +95,12 @@
 
 
 </body>
+<div id="underline_1"></div>
+<!-- <footer>
+
+
+
+
+</footer>-->
+
 </html>
