--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
         <span id="sous_menu_1">
             <ul>
              <li class="sous_menu_li"><a class="sous_menu_a"href="">Acceuil</a></li>
-             <li class="sous_menu_li"><a class="sous_menu_a"href="">Femme</a></li>
-                <li class="sous_menu_li"><a class="sous_menu_a"href="">Homme</a></li>
+             <li class="sous_menu_li"><a class="sous_menu_a"href="#">Catégorie</a>
+                    <ul id="deroulant"><a href=""></a>
+
+                        <li><a href="">Collier</a></li>
+                        <li><a href="">Rat-coup</a></li>
+                        <li><a href="">bague</a></li>
+                        <li><a href="">bracellet</a></li>
+                        <li><a href="">personalier</a></li>
+                        
+
+                    </ul>
+            </li>
          </ul>
         </span>
         <span id="sous_menu_2">
@@ -96,11 +106,15 @@
 
 </body>
 <div id="underline_1"></div>
-<!-- <footer>
+<footer>
+<div id="lien_utile">
+    <a href="">Condition generale de vente</a> <br>
+  <br>  <a href="">Contacts</a>
+    <div id="copy_right">  &copy; 2021 Smocklife</div>
+</div>
 
 
 
-
-</footer>-->
-
+</footer>
+<div id="underline_2"></div>
 </html>
