--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
              <li class="sous_menu_li"><a class="sous_menu_a"href="#">Catégorie</a>
                     <ul id="deroulant"><a href=""></a>
 
-                        <li><a href="/page/menu_page/shop_collier.html">Collier</a></li>
-                        <li><a href="/page/menu_page/shop_rascous.html">Ras-coup</a></li>
+                        <li><a href="/vampiwelry/page/menu_page/shop_collier.html">Collier</a></li>
+                        <li><a href="/page/menu_page/shop_rascous.html">Ras-cou</a></li>
                         <li><a href="/page/menu_page/shop_bague.html">bague</a></li>
                         <li><a href="/page/menu_page/shop_brecellet.html">bracellet</a></li>
                         <li><a href="/page/menu_page/shop_personalier.html">personalier</a></li>
