--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="top_menu">
         <span id="top_titre">VAMPIWELRY</span>
         <br>
-        <span ><img id="logo" src="image/icone/logo.png" alt="" srcset=""></span>
+        <span ><img id="logo" src="image/icone/vampi_transpa.png" alt="" srcset=""></span>
         
         <br>
     
