--- a/index.html
+++ b/index.html
@@ -96,13 +96,12 @@
 
 <div id="underline_1"></div>
 <footer>
-<div id="lien_utile">
-    <a href="">Condition generale de vente</a> <br>
-  <br>  <a href="">Contacts</a>
-    <div id="copy_right">  &copy; 2021 Smocklife</div>
-</div>
-
-
+    <div id="lien_utile">
+            <a href="">Condition generale de vente</a> <br>
+        <br>  
+            <a href="">Contacts</a>
+        <div id="copy_right">  &copy; 2021 Smocklife</div>
+    </div>
 
 </footer>
 </body>
