Mise_a_jour_page

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <ul id="deroulant"><a href=""></a>
 
                         <li><a href="/vampiwelry/page/menu_page/shop_collier.html">Collier</a></li>
-                        <li><a href="/page/menu_page/shop_rascous.html">Ras-cou</a></li>
-                        <li><a href="/page/menu_page/shop_bague.html">bague</a></li>
-                        <li><a href="/page/menu_page/shop_brecellet.html">bracellet</a></li>
-                        <li><a href="/page/menu_page/shop_personalier.html">personalier</a></li>
+                        <li><a href="/vampiwelry/page/menu_page/shop_rascou.html">ras de cou</a></li>
+                        <li><a href="/vampiwelry/page/menu_page/shop_bague.html">bague</a></li>
+                        <li><a href="/vampiwelry/page/menu_page/shop_bracellet.html">bracellet</a></li>
+                        <li><a href="/vampiwelry/page/menu_page/shop_personaliser.html">personalier</a></li>
                         
 
                     </ul>
