--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="ligne_1">
             <span class="shop_img">
         
-                <a href="http://google.fr"> <img src="https://picsum.photos/200/300?t=5" alt=""></a>
+                <a href="/vampiwelry/page/product/collier1.html"> <img src="https://picsum.photos/200/300?t=5" alt=""></a>
                 <a href="http://google.fr"> <img src="https://picsum.photos/200/300?t=5" alt=""></a>
                 <a href="http://google.fr"> <img src="https://picsum.photos/200/300?t=5" alt=""></a>
                     
